--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -99,10 +99,10 @@
                             <span class="info-label">当前时间 (UTC+8):</span>
                             <span class="info-value" id="current-time">{{ current_time }}</span>
                         </div>
-                        <!-- <div class="info-item">
+                        <div class="info-item">
                             <span class="info-label">您的IP地址:</span>
                             <span class="info-value" id="visitor-ip">{{ visitor_ip }}</span>
-                        </div> -->
+                        </div>
                         <div class="info-item">
                             <span class="info-label">服务器延迟（到达网站服务器）:</span>
                             <span class="info-value" id="server-latency">检测中...</span>
